# leptonica

./: .gitignore  BUILD.bazel  CMakeLists.txt  WORKSPACE
cmake/: Configure.cmake
cmake/templates/: LeptonicaConfig.cmake.in
src/: CMakeLists.txt  libversions.c
